--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <form>
 
             <input type="text" name="username" placeholder="username">
-            <p>Username must be  and contain 5 - 12 characters</p>
+            <p>Username must be a letter or number and contain 5 - 12 characters</p>
 
             <input type="text" name="email" placeholder="email">
             <p>Email must be a valid address, e.g. me@mydomain.com</p>
